--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,6 @@
-server.port=9090
-socket.host=127.0.0.1
-socket.port=9999
-#redis
-spring.redis.port=6379
-spring.redis.database=9
-spring.redis.host=127.0.0.1
-spring.redis.password=
-spring.redis.jedis.pool.max-active=8
-spring.redis.jedis.pool.max-wait=-1
-spring.redis.jedis.pool.max-idle=8
-spring.redis.jedis.pool.min-idle=0
-spring.redis.timeout=10000
+spring.profiles.active=@profileActive@
 
-#MongoDB ##############################
-spring.data.mongodb.uri=mongodb://127.0.0.1:27017/chat
-logging.level.root=info
-logging.level.com.xncoding=DEBUG
-com.webchat.chat.*=info
-logging.file=D:/logs/app.log
-
+mybatis.mapperLocations=classpath*:mapper/*.xml
 # 静态资源路径配置
 #wyait.picpath=D:/demo-images/
 #
