--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <skipTests>true</skipTests>
+        <shiro.spring.version>1.4.0</shiro.spring.version>
+        <jwt.auth0.version>3.2.0</jwt.auth0.version>
     </properties>
 
     <dependencies>
@@ -27,7 +29,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
+        <!--aop-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
         <!-- netty-socketio依赖,用于消息推送 -->
         <dependency>
             <groupId>com.corundumstudio.socketio</groupId>
@@ -77,13 +83,6 @@
             <optional>true</optional>
         </dependency>
 
-        <!--mybatis-generator-->
-        <dependency>
-            <groupId>org.mybatis.generator</groupId>
-            <artifactId>mybatis-generator-core</artifactId>
-            <version>1.3.7</version>
-            <type>jar</type>
-        </dependency>
 
         <!-- alibaba的druid数据库连接池 -->
         <dependency>
@@ -98,6 +97,13 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <!--mybatis-generator-->
+        <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+            <version>1.3.7</version>
+            <type>jar</type>
+        </dependency>
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
@@ -108,6 +114,23 @@
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.9</version>
+        </dependency>
+        <!--shiro-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.shiro</groupId>-->
+<!--            <artifactId>shiro-spring-boot-web-starter</artifactId>-->
+<!--            <version>${shiro.spring.version}</version>-->
+<!--        </dependency>-->
+        <!--jwt-->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>${jwt.auth0.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
         </dependency>
     </dependencies>
 
