添加注释,修改名称,增加工具类

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -37,6 +37,7 @@ spring.datasource.druid.stat-view-servlet.login-password=admin
 spring.datasource.druid.stat-view-servlet.allow=
 spring.datasource.druid.stat-view-servlet.deny=
 
+upload.file.path = D:/uploadImage/
 # 静态资源路径配置
 #wyait.picpath=D:/demo-images/
 #
