--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <skipTests>true</skipTests>
         <shiro.spring.version>1.4.0</shiro.spring.version>
         <jwt.auth0.version>3.2.0</jwt.auth0.version>
+        <swagger.version>2.9.2</swagger.version>
     </properties>
 
     <dependencies>
@@ -116,11 +117,11 @@
             <version>1.2.9</version>
         </dependency>
         <!--shiro-->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.shiro</groupId>-->
-<!--            <artifactId>shiro-spring-boot-web-starter</artifactId>-->
-<!--            <version>${shiro.spring.version}</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring-boot-web-starter</artifactId>
+            <version>${shiro.spring.version}</version>
+        </dependency>
         <!--jwt-->
         <dependency>
             <groupId>com.auth0</groupId>
@@ -132,6 +133,19 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.7</version>
         </dependency>
+        <!--接口文档-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+
+
     </dependencies>
 
     <profiles>
