--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.profiles.active=@profileActive@
 
 mybatis.mapperLocations=classpath*:mapper/*.xml
+chat.cluster=false
+chat.globalSessionTimeout=3600
+
+spring.main.allow-bean-definition-overriding=true
 # 静态资源路径配置
 #wyait.picpath=D:/demo-images/
 #
