--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,7 +16,7 @@ spring.redis.timeout=10000
 spring.data.mongodb.uri=mongodb://127.0.0.1:27017/chat
 logging.level.root=info
 logging.level.com.xncoding=DEBUG
-com.webchat.chat.*=info
+com.hamster.chat.*=info
 logging.file=D:/logs/app.log
 
 
